add test case for shipping to Litmus for testing